--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.12",
+    "@ai-sdk/react": "^3.0.41",
     "@clerk/clerk-expo": "^2.19.17",
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
@@ -22,6 +24,7 @@
     "@tamagui/config": "^1.144.2",
     "@tamagui/lucide-icons": "^1.144.2",
     "@tamagui/metro-plugin": "^1.144.2",
+    "ai": "^6.0.39",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.10",
@@ -45,7 +48,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "tamagui": "^1.144.2"
+    "tamagui": "^1.144.2",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
