--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tamagui/metro-plugin": "^1.144.2",
     "ai": "^6.0.39",
     "expo": "~54.0.31",
+    "expo-auth-session": "~7.0.10",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
@@ -46,10 +47,15 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tamagui": "^1.144.2",
     "zod": "^4.3.5"
+  },
+  "overrides": {
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
